--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,10 +27,16 @@ environment:
 # dependencies can be manually updated by changing the version numbers below to
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
+# dependencies:
+#   flutter:
+#     sdk: flutter
+
 dependencies:
   flutter:
     sdk: flutter
-
+  get: ^4.6.6
+  get_storage: ^2.1.1
+  shared_preferences: ^2.2.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
